--- a/starview_frontend/src/components/explore/LocationCard/styles.css
+++ b/starview_frontend/src/components/explore/LocationCard/styles.css
@@ -10,7 +10,7 @@
   padding: 0;
 
   /* Staggered fade-in animation */
-  animation: fadeInUp 0.5s ease-out backwards;
+  animation: fadeInUp var(--animation-duration) ease-out backwards;
   animation-delay: calc(var(--card-index, 0) * 0.08s);
 }
 
@@ -66,7 +66,7 @@
 }
 
 .location-card__save--active i {
-  animation: heartPop 0.3s ease-out;
+  animation: heartPop var(--animation-duration) ease-out;
 }
 
 @keyframes heartPop {
