--- a/starview_frontend/src/pages/PasswordResetRequest/styles.css
+++ b/starview_frontend/src/pages/PasswordResetRequest/styles.css
@@ -73,7 +73,7 @@
 
 .password-reset-success {
   text-align: center;
-  animation: fadeInUp 0.4s ease-out backwards;
+  animation: fadeInUp var(--animation-duration) ease-out backwards;
 }
 
 .password-reset-success-icon {
